[workspace]
resolver = "3"
members = [
    "diff",
    "graph",
    "ojo",
    "ojo_wasm",
    "libojo",
    "multimap",
    "partition",
]

[workspace.package]
version = "0.1.1"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2024"
repository = "https://github.com/jneem/ojo"
license = "MIT OR Apache-2.0"

[profile.release]
lto = true
opt-level = "z"
