[workspace]
resolver = "3"
members = [
    "diff",
    "graph",
    "ojo",
    "ojo_wasm",
    "libojo",
    "multimap",
    "partition",
]

[workspace.package]
version = "0.1.1"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2024"
repository = "https://github.com/jneem/ojo"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
askama_escape = "0.13"
assert_cmd = "2.0"
assert_fs = "1.1"
base64 = "0.22"
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cmd_lib = "1.9"
colored = "3.0"
console_log = "1.0"
crossterm = "0.29"
flexi_logger = "0.31"
itertools = "0.14"
libojo = { path = "libojo", version = "0.1.1" }
log = "0.4"
ojo_diff = { path = "diff", version = "0.1.1" }
ojo_graph = { path = "graph", version = "0.1.1" }
ojo_multimap = { path = "multimap", version = "0.1.1" }
ojo_partition = { path = "partition", version = "0.1.1" }
predicates = "3.1.3"
pretty_assertions = "1.4"
proptest = "1.7"
rand = "0.9.1"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.20"
test-context = "0.4"
thiserror = "2.0"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }

[profile.release]
lto = true
opt-level = "z"
