[package]
name = "jp_diff"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
description = "A small crate for computing diffs (part of the jp project)"
repository = "https://github.com/jneem/jp"
license = "MIT/Apache-2.0"

[dependencies]

[dev-dependencies]
proptest = "0.8"
