[package]
name = "quilt_diff"
version = "0.1.1"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
description = "A small crate for computing diffs (part of the quilt project)"
repository = "https://github.com/jneem/quilt"
license = "MIT/Apache-2.0"

[dependencies]

[dev-dependencies]
proptest = "0.8"
