[package]
name = "ojo_graph"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
description = "A collection of graph traits and algorithms (part of the ojo project)"
repository = "https://github.com/jneem/ojo"
license = "MIT/Apache-2.0"

[dependencies]
itertools = "0.8"

[dev-dependencies]
proptest = "0.8"
