[package]
name = "ojo_graph"
description = "A collection of graph traits and algorithms (part of the ojo project)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
itertools = "0.8"

[dev-dependencies]
proptest = "0.8"
