[package]
name = "ojo_graph"
description = "A collection of graph traits and algorithms (part of the ojo project)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
itertools.workspace = true

[dev-dependencies]
proptest.workspace = true
