[package]
name = "jp"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"

[dependencies]
colored = "1.6"
diff = { path = "../diff" }
failure = "0.1.3"
graph = { path = "../graph" }
libjp = { path = "../libjp" }
tempfile = "3"

[dependencies.clap]
version = "2"
features = ["yaml"]

