[package]
name = "jp"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"

[dependencies]
askama_escape = "0.1"
colored = "1.6"
diff = { path = "../diff" }
failure = "0.1.3"
flexi_logger = "0.10"
graph = { path = "../graph" }
libjp = { path = "../libjp" }
log = "0.4"
termion = "1.5"

[dependencies.clap]
version = "2"
features = ["yaml"]

