[package]
name = "jp_wasm"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "0.1"
graph = { path = "../graph" }
libjp = { path = "../libjp" }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

