[package]
name = "jp_web"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"

[dependencies]
    failure = "0.1"
    libjp = { path = "../libjp" }
    log = "0.4"
    serde = "1.0"
    serde_derive = "1.0"
    serde_json = "1.0"
    stdweb = "0.4"
    web_logger = "0.1"
    yew = { git = "https://github.com/DenisKolodin/yew.git" }
