[package]
name = "libjp"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.9"
diff = { path = "../diff" }
itertools = "0.7"
multimap = { path = "../multimap" }
rpds = { git = "https://github.com/jneem/rpds", branch = "rbset", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
sha2 = "0.7"

[dev-dependencies]

