[package]
name = "libjp"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
diff = { path = "../diff" }
graph = { path = "../graph" }
itertools = "0.8"
multimap = { path = "../multimap" }
partition = { path = "../partition" }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
sha2 = "0.7"

[dev-dependencies]
byteorder = "1.2"
pretty_assertions = "0.5"
proptest = "0.8"

