[package]
name = "libojo"
description = "A library for interacting with ojo repositories (part of the ojo project)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
itertools.workspace = true
log.workspace = true
ojo_diff.workspace = true
ojo_graph.workspace = true
ojo_multimap.workspace = true
ojo_partition.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
byteorder.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
