[package]
name = "ojo_multimap"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
description = "A barebones multimap (part of the ojo project)"
repository = "https://github.com/jneem/ojo"
license = "MIT/Apache-2.0"

[dependencies]
    serde = "1.0"
    serde_derive = "1.0"

[dev-dependencies]
    serde_yaml = "0.8"
