[package]
name = "ojo_multimap"
description = "A barebones multimap (part of the ojo project)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_yaml = "0.7"
