[package]
name = "ojo_multimap"
description = "A barebones multimap (part of the ojo project)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
