[package]
name = "ojo"
description = "An experimental and educational version control system"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
askama_escape = "0.1"
clap = { version = "2", features = ["yaml"] }
colored = "1.6"
failure = "0.1.3"
flexi_logger = "0.10"
libojo = { path = "../libojo", version = "0.1.0" }
log = "0.4"
ojo_diff = { path = "../diff", version = "0.1.0" }
ojo_graph = { path = "../graph", version = "0.1.0" }
termion = "1.5"
