[package]
name = "ojo"
description = "An experimental and educational version control system"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
askama_escape.workspace = true
clap.workspace = true
colored.workspace = true
flexi_logger.workspace = true
libojo.workspace = true
log.workspace = true
ojo_diff.workspace = true
ojo_graph.workspace = true
termion.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
cmd_lib.workspace = true
predicates.workspace = true
tempfile.workspace = true
test-context.workspace = true
