[package]
name = "ojo_wasm"
description = "A minimal wasm interface to ojo (an educational version control system)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "0.1"
libojo = { path = "../libojo", version = "0.1.0" }
log = "0.4"
ojo_graph = { path = "../graph", version = "0.1.0" }
serde = "1.0"
serde_derive = "1.0"
wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"] }
