[package]
name = "ojo_wasm"
description = "A minimal wasm interface to ojo (an educational version control system)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log.workspace = true
libojo.workspace = true
log.workspace = true
ojo_graph.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true
