[package]
name = "ojo_partition"
description = "A union-find/disjoint-sets algorithm (part of the ojo project)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ojo_multimap = { path = "../multimap", version = "0.1.0" }
serde = "1.0"
serde_derive = "1.0"
