[package]
name = "ojo_partition"
description = "A union-find/disjoint-sets algorithm (part of the ojo project)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ojo_multimap.workspace = true
serde.workspace = true
