[package]
name = "quilt"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
description = "An experimental and educational version control system"
repository = "https://github.com/jneem/quilt"
license = "MIT/Apache-2.0"

[dependencies]
askama_escape = "0.1"
colored = "1.6"
failure = "0.1.3"
flexi_logger = "0.10"
libquilt = { path = "../libquilt", version = "0.1.0" }
log = "0.4"
quilt_diff = { path = "../diff", version = "0.1.0" }
quilt_graph = { path = "../graph", version = "0.1.0" }
termion = "1.5"

[dependencies.clap]
version = "2"
features = ["yaml"]

[[bin]]
name = "ql"
path = "src/main.rs"
