[package]
name = "quilt_wasm"
version = "0.1.1"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/jneem/quilt"
description = "A minimal wasm interface to quilt (an educational version control system)"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "0.1"
libquilt = { path = "../libquilt", version = "0.1.0" }
log = "0.4"
quilt_graph = { path = "../graph", version = "0.1.0" }
serde = "1.0"
serde_derive = "1.0"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]
